@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<scraper framework="1.0" date="2010-04-23" >
+<scraper framework="1.0" date="2010-05-18" >
 	<CreateSearchUrl dest="3">
 		<RegExp input="$$1" output="&lt;url&gt;http://sratim.co.il/browse.php?cs=movies&q=\1|User-Agent=Mozilla%2F4.0%20(compatible%3B%20MSIE%207.0%3B%20Windows%20NT%206.0)&lt;/url&gt;" dest="3">
 			<expression noclean="1" />
@@ -19,8 +19,7 @@
 				<expression clear="yes" noclean="1">http://www.imdb.com/title/(tt[^"]+)</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;title&gt;\1&lt;/title&gt;" dest="5+">
-				<!--<expression trim="1" noclean="1">class=&quot;subtext.view&quot;.*?&gt;.*?&lt;b&gt;(.*?)&lt;/b&gt;</expression>-->
-				<expression trim="1" noclean="1">&lt;h1 class="subtext_view"&gt;[^&lt;]*&lt;div[^&gt;]*&gt;[^&lt;]*&lt;a href[^&gt;]*&gt;[^&lt;]*&lt;/a[^&gt;]*&gt;[^&lt;]*&lt;/div[^&gt;]*&gt;"?([^&lt;]*)"?&lt;/h1</expression>
+				<expression trim="1" noclean="1">&lt;title&gt;([^–\(]*)(\(\d*\))? – סרטים&lt;/title&gt;</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="5+">
 				<expression trim="1">&lt;div id="profilememo" style="font-size:14px;[^;]*;?text-align:justify;"&gt;(([^&lt;]*(&lt;br\s*/?&gt;)?[^&lt;]*)*)&lt;/div&gt;</expression>
