@@ -1,3 +1,7 @@
+[B]1.1.3[/B]
+- fix movie names issue after sratim changed format
+- support movie names for movies without year
+
 [B]1.1.2[/B]
 - support new search results
 - fix non-imdb rating
